Mon Jun  3 16:11:12 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * ACEXML/common/FileCharStream.cpp:

          Fixed a memory leak.

        * ACEXML/common/HttpCharStream.cpp:
        * ACEXML/common/HttpCharStream.cpp:
        * ACEXML/common/HttpCharStream.h:
        * ACEXML/common/Makefile:
        * ACEXML/common/Mem_Map_Stream.cpp:
        * ACEXML/common/Mem_Map_Stream.h:
        * ACEXML/common/URL_Addr.cpp:
        * ACEXML/common/URL_Addr.h:

          Functionality needed by the parser to fetch URI's (DTDs etc)
          from the web. This is a simple http_get implementation and
          doesn't work for https URLs (which can be fixed easily provided
          there is interest).

        * ACEXML/common/Parser.cpp:

          Fixed a typo.

        * ACEXML/tests/HttpCharStream_Test.cpp:
        * ACEXML/tests/Makefile:

          New regression test to test fetching of URI's from the web by
          the parser.


Mon Jun  3 06:21:57 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* examples/C++NPv2/AIO_Client_Logging_Daemon.cpp: Removed
	  unnecessary 'return;' calls.

Mon Jun  3 07:23:56 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* Framework_Component_DLL.bor:  Fixed typo.

Sun Jun  2 22:52:23 UTC 2002  Craig Rodrigues  <crodrigu@bbn.com>

	[Bug 1208]
        * ace/README: Document new ACE_HAS_3_PARAM_WCSTOK macro.
	* ace/OS_String.inl (strtok_r): Check ACE_HAS_3_PARAM_WCSTOK macro.

	* ace/config-aix-4.x.h:
	* ace/config-linux-common.h:
	* ace/config-sunos5.7.h:
	  Define ACE_HAS_3_PARAM_WCSTOK on these platforms after doing
	  the appropriate checks.

Sun Jun  2 15:34:41 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/DLL.cpp:

	  Test for null dll_name_ before calling open() in the copy ctor, since
	  open would flag it as an error.  Improved error messages.

	* ace/DLL_Manager.{h,cpp}:
	* ace/Framework_Component.cpp:

	  Changed ACE_DLL_Manager to use ACE_Unmanaged_Singleton so that it can be